@@ -449,7 +449,6 @@ DiscreteLogarithmPackage(M) : public == private where
 )abbrev category FFIELDC FiniteFieldCategory
 ++ Author: J. Grabmeier, A. Scheerhorn
 ++ Date Created: 11 March 1991
-++ Date Last Updated: 31 March 1991
 ++ Basic Operations: _+, _*, extensionDegree, order, primitiveElement
 ++ Related Constructors:
 ++ Also See:
@@ -553,7 +552,7 @@ FiniteFieldCategory() : Category ==_
       start : Integer :=
         -- in the polynomial case, index from 1 to characteristic-1
         -- gives prime field elements
-        representationType = "polynomial" => characteristic()::Integer
+        representationType() = "polynomial" => characteristic()::Integer
         1
       found : Boolean := false
       for i in start..  while not found repeat
