@@ -36,7 +36,8 @@ OpenMath() : Category == with
     OMwrite(x : %, wholeObj : Boolean) : String ==
         s : String := ""
         sp : None := OM_-STRINGTOSTRINGPTR(s)$Lisp
-        dev : OpenMathDevice := OMopenString(sp pretend String, OMencodingXML)
+        dev : OpenMathDevice := OMopenString(sp pretend String,
+                                             OMencodingXML())
         OMwrite(dev, x, wholeObj)
         OMclose(dev)
         s := OM_-STRINGPTRTOSTRING(sp)$Lisp pretend String
